test/Fail/OccurrenceAnalysis2.err
OccurrenceAnalysis2.agda:12.5-9: error: [UnequalTerms]
The terms
  ⊤
and
  Bool
are not equal at type Set
when checking that the expression refl has type F b ⊤ ≡ F b Bool
